[package]
name = "axaddrspace"
version = "0.1.0"
edition = "2021"
description = "ArceOS-Hypervisor guest address space management module"

[dependencies]
log = "0.4"
cfg-if = "1.0"
lazyinit = "0.2"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"

# Operating system independent modules provided by ArceOS.
axerrno = "0.1.0"
memory_addr = "0.3"
memory_set = "0.3"
page_table_entry = { version = "0.3.3", features = ["arm-el2"] }
page_table_multiarch = "0.3.3"

[patch.crates-io]
# todo: update to new version of `memory_addr` on `crates.io` once it get released
memory_addr = { git = "https://github.com/arceos-org/memory_addr.git", rev = "46c06e5" }
page_table_entry = { git = "https://github.com/arceos-org/page_table_multiarch.git", rev = "feb4aa3" }
page_table_multiarch = { git = "https://github.com/arceos-org/page_table_multiarch.git", rev = "feb4aa3" }
